--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,8 +1,14 @@
 .nav {
 	grid-area: n;
 	background-color: lightpink;
+	padding: 15px;
 }
 
-.item {
+.item a {
 	color: whitesmoke;
+	text-decoration: none;
+}
+
+.activeStyle {
+	color: hotpink !important;
 }
