--- a/src/components/Dialogs/DialogItem/DialogItem.module.css
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.css
@@ -1,9 +1,22 @@
-.item {
+.itemWrapper {
+	display: flex;
+}
+
+.link {
 	color: dimgray;
 	text-decoration: none;
 }
 
-.activeItem {
+.activeLink {
 	text-decoration: none;
 	color: hotpink;
+}
+
+.avatar {
+	margin-bottom: 10%;
+	margin-right: 5%;
+	vertical-align: middle;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
 }
