--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,3 +1,8 @@
+.text {
+	display: flex;
+	justify-content: right;
+}
+
 .dialogs {
 	display: grid;
 	grid-template-columns: 2fr 10fr;
@@ -17,3 +22,5 @@
 .message {
 
 }
+
+
