--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -2,3 +2,18 @@
 	width: 100px;
 	height: 100px;
 }
+
+.page {
+	cursor: pointer;
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	margin: 2px;
+	font: inherit;
+	outline: inherit;
+}
+
+.selectedPage {
+	font-weight: bold;
+}
