--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,3 +7,13 @@
 .header img {
 	width: 50px;
 }
+
+.loginBlock {
+	float: right;
+	margin-right: 100px;
+}
+
+.loginBlock a {
+	text-decoration: none;
+	color: whitesmoke;
+}
